max-height added to product pic

--- a/yasnateam-ui/index.html
+++ b/yasnateam-ui/index.html
@@ -40,7 +40,7 @@
 
             <div class="header-btns">
               <a href="#" class="btn-login btn-default">Log in</a>
-              <a href="#contact" class="light-bg btn-default start-btn">Get strated</a>
+              <a href="#contact" class="light-bg btn-default start-btn">Get started</a>
             </div>
             </div>
         </div>
@@ -178,6 +178,9 @@
                     <a href="#">
                       <img src="images/logo/logo1.jpg" width="60" height="60">
                     </a>
+                  <!--  <div class="product-data">
+                      <img src="">
+                    </div>-->
                   </li>
                   <li class="logo" data-slide="slide2">
                     <a href="#">
@@ -231,19 +234,19 @@
                     <div class="col-lg-6 col-lg-push-6">
                       <div class="product-pic">
                         <img src="images/sample.jpg" width="500" height="333">
-                        <h2 class="name overlayer">Product name</h2>
+                        <h2 class="name overlayer product-title">Product name</h2>
                       </div>
                     </div>
                     <div class="col-lg-6 col-lg-pull-6 product-detail">
                       <div class="product-content">
-                        <h2 class="name">Product name</h2>
+                        <h2 class="name product-title">Product name</h2>
                         <p class="description">
                           Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
                           tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
                           quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
                           consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
                         </p>
-                        <a href="" class="black-border btn-default">
+                        <a href="" class="black-border btn-default product-link">
                           <span class="text-deactive">View product</span>
                         </a>
                       </div>
