Auto updating data in costumers section
data in costumers section updates automatically while logo slider changes.
active logo is always in center.
active logo has "color" class.
active logo changes on click.

--- a/yasnateam-ui/index.html
+++ b/yasnateam-ui/index.html
@@ -178,44 +178,121 @@
                     <a href="#">
                       <img src="images/logo/logo1.jpg" width="60" height="60">
                     </a>
-                  <!--  <div class="product-data">
-                      <img src="">
-                    </div>-->
+                    <div class="product-data">
+                      <img src="images/sample.jpg">
+                      <h1>product 1</h1>
+                      <p>
+                        New New New New New New Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+                        tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+                        quis nostrud exercitation ullamco laboris nisi ut aliquip
+                      </p>
+                      <a href="#hi"></a>
+                    </div>
                   </li>
                   <li class="logo" data-slide="slide2">
                     <a href="#">
                       <img src="images/logo/logo2.jpg" width="60" height="60">
                     </a>
+                    <div class="product-data">
+                      <img src="images/sample2.jpg">
+                      <h1>product 2</h1>
+                      <p>
+                        New New New New New New Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+                        tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+                        quis nostrud exercitation ullamco laboris nisi ut aliquip
+                      </p>
+                      <a href="#hi"></a>
+                    </div>
                   </li>
                   <li class="logo" data-slide="slide3">
                     <a href="#">
                       <img src="images/logo/logo3.jpg" width="60" height="60">
                     </a>
+                    <div class="product-data">
+                      <img src="images/sample3.jpg">
+                      <h1>product 3</h1>
+                      <p>
+                         3333 New New New New New New Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+                        tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+                        quis nostrud exercitation ullamco laboris nisi ut aliquip
+                      </p>
+                      <a href="#hi"></a>
+                    </div>
                   </li>
                   <li class="logo" data-slide="slide4">
                     <a href="#">
                       <img src="images/logo/logo4.jpg" width="60" height="60">
                     </a>
+                    <div class="product-data">
+                      <img src="images/slide4.jpg">
+                      <h1>product 4</h1>
+                      <p>
+                        New New New New New New Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+                        tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+                        quis nostrud exercitation ullamco laboris nisi ut aliquip
+                      </p>
+                      <a href="#hi"></a>
+                    </div>
                   </li>
                   <li class="logo" data-slide="slide5">
                     <a href="#">
                       <img src="images/logo/logo5.jpg" width="60" height="60">
                     </a>
+                    <div class="product-data">
+                      <img src="images/slide5.jpg">
+                      <h1>product 5</h1>
+                      <p>
+                        New New New New New New Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+                        tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+                        quis nostrud exercitation ullamco laboris nisi ut aliquip
+                      </p>
+                      <a href="#hi"></a>
+                    </div>
                   </li>
-                  <li class="logo" data-hash="slide6">
+                  <li class="logo" data-slide="slide6">
                     <a href="#">
                       <img src="images/logo/logo6.jpg" width="107" height="60">
                     </a>
+                    <div class="product-data">
+                      <img src="images/slide6.jpg">
+                      <h1>product 6</h1>
+                      <p>
+                        New New New New New New Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+                        tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+                        quis nostrud exercitation ullamco laboris nisi ut aliquip
+                      </p>
+                      <a href="#hi"></a>
+                    </div>
                   </li>
                   <li class="logo" data-slide="slide7">
                     <a href="#">
                       <img src="images/logo/logo7.jpg" width="60" height="60">
                     </a>
+                    <div class="product-data">
+                      <img src="images/sample.jpg">
+                      <h1>product 7</h1>
+                      <p>
+                        New New New New New New Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+                        tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+                        quis nostrud exercitation ullamco laboris nisi ut aliquip
+                      </p>
+                      <a href="#hi"></a>
+                    </div>
                   </li>
                   <li class="logo" data-slide="slide8">
                     <a href="#">
                       <img src="images/logo/logo8.png" width="61" height="60">
                     </a>
+                    <div class="product-data">
+                      <img src="images/sample2.jpg">
+                      <h1>product 8</h1>
+                      <p>
+                        last last New New New New New New Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+                        tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+                        quis nostrud exercitation ullamco laboris nisi ut aliquip
+                      </p>
+                      <a href="#hi"></a>
+                    </div>
                   </li>
                 </ul>
               </div>
