Staff Data Changes On Click & customerDataChanger Pause added
*Staff data changes in the related section as user clicks on profile cards.
*Function "staffDataChanger" created.
* "customerDataChanger" stops when mouse enters details section on logos.
* Function "colorize" updated to a general varsion: ClassUpdater
*Bugs Fixed.
*Both Farsi and main Version Updated

--- a/yasnateam-ui/index-farsi.html
+++ b/yasnateam-ui/index-farsi.html
@@ -180,41 +180,105 @@
                     <a href="#">
                       <img src="images/logo/logo1.jpg" width="60" height="60">
                     </a>
+                    <div class="product-data">
+                      <img src="images/sample.jpg">
+                      <h1>محصول 1</h1>
+                      <p>
+                        به روال برنامه ریزی برای ایجاد یک سایت در فضای مجازی اینترنت که با ساختار کلی و جزئی ارائه می شود طراحی وب سایت گویند. این برنامه ریزی بر روی تمامی تصاویر ،متون ، فایل های صوتی و تصویری و المانهای خاص که برنامه نویسی شده اند اعمال می شود تا در نهایت تمام اینها بر روی صفحه ای که قابل روئیت در مرورگر باشد اعمال می شود و در فرمت بندی خاصی در طراحی وب سایت بر روی آن صفحه قرار می گیرند.
+                      </p>
+                      <a href="#hi"></a>
+                    </div>
                   </li>
                   <li class="logo" data-slide="slide2">
                     <a href="#">
                       <img src="images/logo/logo2.jpg" width="60" height="60">
                     </a>
+                    <div class="product-data">
+                      <img src="images/sample2.jpg">
+                      <h1>محصول 2</h1>
+                      <p>
+                        به روال برنامه ریزی برای ایجاد یک سایت در فضای مجازی اینترنت که با ساختار کلی و جزئی ارائه می شود طراحی وب سایت گویند. این برنامه ریزی بر روی تمامی تصاویر ،متون ، فایل های صوتی و تصویری و المانهای خاص که برنامه نویسی شده اند اعمال می شود تا در نهایت تمام اینها بر روی صفحه ای که قابل روئیت در مرورگر باشد اعمال می شود و در فرمت بندی خاصی در طراحی وب سایت بر روی آن صفحه قرار می گیرند.
+                      </p>
+                      <a href="#hi"></a>
+                    </div>
                   </li>
                   <li class="logo" data-slide="slide3">
                     <a href="#">
                       <img src="images/logo/logo3.jpg" width="60" height="60">
                     </a>
+                    <div class="product-data">
+                      <img src="images/sample3.jpg">
+                      <h1>محصول 3</h1>
+                      <p>
+                        به روال برنامه ریزی برای ایجاد یک سایت در فضای مجازی اینترنت که با ساختار کلی و جزئی ارائه می شود طراحی وب سایت گویند. این برنامه ریزی بر روی تمامی تصاویر ،متون ، فایل های صوتی و تصویری و المانهای خاص که برنامه نویسی شده اند اعمال می شود تا در نهایت تمام اینها بر روی صفحه ای که قابل روئیت در مرورگر باشد اعمال می شود و در فرمت بندی خاصی در طراحی وب سایت بر روی آن صفحه قرار می گیرند.
+                      </p>
+                      <a href="#hi"></a>
+                    </div>
                   </li>
                   <li class="logo" data-slide="slide4">
                     <a href="#">
                       <img src="images/logo/logo4.jpg" width="60" height="60">
                     </a>
+                    <div class="product-data">
+                      <img src="images/slide4.jpg">
+                      <h1>محصول 4</h1>
+                      <p>
+                        به روال برنامه ریزی برای ایجاد یک سایت در فضای مجازی اینترنت که با ساختار کلی و جزئی ارائه می شود طراحی وب سایت گویند. این برنامه ریزی بر روی تمامی تصاویر ،متون ، فایل های صوتی و تصویری و المانهای خاص که برنامه نویسی شده اند اعمال می شود تا در نهایت تمام اینها بر روی صفحه ای که قابل روئیت در مرورگر باشد اعمال می شود و در فرمت بندی خاصی در طراحی وب سایت بر روی آن صفحه قرار می گیرند.
+                      </p>
+                      <a href="#hi"></a>
+                    </div>
                   </li>
                   <li class="logo" data-slide="slide5">
                     <a href="#">
                       <img src="images/logo/logo5.jpg" width="60" height="60">
                     </a>
+                    <div class="product-data">
+                      <img src="images/slide5.jpg">
+                      <h1>محصول 6</h1>
+                      <p>
+                        به روال برنامه ریزی برای ایجاد یک سایت در فضای مجازی اینترنت که با ساختار کلی و جزئی ارائه می شود طراحی وب سایت گویند. این برنامه ریزی بر روی تمامی تصاویر ،متون ، فایل های صوتی و تصویری و المانهای خاص که برنامه نویسی شده اند اعمال می شود تا در نهایت تمام اینها بر روی صفحه ای که قابل روئیت در مرورگر باشد اعمال می شود و در فرمت بندی خاصی در طراحی وب سایت بر روی آن صفحه قرار می گیرند.
+                      </p>
+                      <a href="#hi"></a>
+                    </div>
                   </li>
-                  <li class="logo" data-hash="slide6">
+                  <li class="logo" data-slide="slide6">
                     <a href="#">
                       <img src="images/logo/logo6.jpg" width="107" height="60">
                     </a>
+                    <div class="product-data">
+                      <img src="images/slide6.jpg">
+                      <h1>محصول 9</h1>
+                      <p>
+                        به روال برنامه ریزی برای ایجاد یک سایت در فضای مجازی اینترنت که با ساختار کلی و جزئی ارائه می شود طراحی وب سایت گویند. این برنامه ریزی بر روی تمامی تصاویر ،متون ، فایل های صوتی و تصویری و المانهای خاص که برنامه نویسی شده اند اعمال می شود تا در نهایت تمام اینها بر روی صفحه ای که قابل روئیت در مرورگر باشد اعمال می شود و در فرمت بندی خاصی در طراحی وب سایت بر روی آن صفحه قرار می گیرند.
+                      </p>
+                      <a href="#hi"></a>
+                    </div>
                   </li>
                   <li class="logo" data-slide="slide7">
                     <a href="#">
                       <img src="images/logo/logo7.jpg" width="60" height="60">
                     </a>
+                    <div class="product-data">
+                      <img src="images/sample.jpg">
+                      <h1>محصول 7</h1>
+                      <p>
+                        به روال برنامه ریزی برای ایجاد یک سایت در فضای مجازی اینترنت که با ساختار کلی و جزئی ارائه می شود طراحی وب سایت گویند. این برنامه ریزی بر روی تمامی تصاویر ،متون ، فایل های صوتی و تصویری و المانهای خاص که برنامه نویسی شده اند اعمال می شود تا در نهایت تمام اینها بر روی صفحه ای که قابل روئیت در مرورگر باشد اعمال می شود و در فرمت بندی خاصی در طراحی وب سایت بر روی آن صفحه قرار می گیرند.
+                      </p>
+                      <a href="#hi"></a>
+                    </div>
                   </li>
                   <li class="logo" data-slide="slide8">
                     <a href="#">
                       <img src="images/logo/logo8.png" width="61" height="60">
                     </a>
+                    <div class="product-data">
+                      <img src="images/sample2.jpg">
+                      <h1>محصول 8</h1>
+                      <p>
+                        به روال برنامه ریزی برای ایجاد یک سایت در فضای مجازی اینترنت که با ساختار کلی و جزئی ارائه می شود طراحی وب سایت گویند. این برنامه ریزی بر روی تمامی تصاویر ،متون ، فایل های صوتی و تصویری و المانهای خاص که برنامه نویسی شده اند اعمال می شود تا در نهایت تمام اینها بر روی صفحه ای که قابل روئیت در مرورگر باشد اعمال می شود و در فرمت بندی خاصی در طراحی وب سایت بر روی آن صفحه قرار می گیرند.
+                      </p>
+                      <a href="#hi"></a>
+                    </div>
                   </li>
                 </ul>
               </div>
@@ -228,21 +292,21 @@
                   <span class="browser-icon"></span>
                 </div>
 
-                <div class="container-fluid">
+                <div class="container-fluid" id="product-view">
                   <div class="row">
                     <div class="col-lg-6 col-lg-push-6">
                       <div class="product-pic">
                         <img src="images/sample.jpg" width="500" height="333">
-                        <h2 class="name overlayer">نام محصول</h2>
+                        <h2 class="name overlayer product-title">نام محصول</h2>
                       </div>
                     </div>
                     <div class="col-lg-6 col-lg-pull-6 product-detail">
                       <div class="product-content">
-                        <h2 class="name">نام محصول</h2>
+                        <h2 class="name product-title">نام محصول</h2>
                         <p class="description">
                           به روال برنامه ریزی برای ایجاد یک سایت در فضای مجازی اینترنت که با ساختار کلی و جزئی ارائه می شود طراحی وب سایت گویند. این برنامه ریزی بر روی تمامی تصاویر ،متون ، فایل های صوتی و تصویری و المانهای خاص که برنامه نویسی شده اند اعمال می شود تا در نهایت تمام اینها بر روی صفحه ای که قابل روئیت در مرورگر باشد اعمال می شود و در فرمت بندی خاصی در طراحی وب سایت بر روی آن صفحه قرار می گیرند.
                         </p>
-                        <a href="" class="black-border btn-default">
+                        <a href="" class="black-border btn-default product-link">
                           <span class="text-deactive">نمایش محصول</span>
                         </a>
                       </div>
@@ -285,7 +349,6 @@
             <div class="cards-container">
               <ul class="cards owl-carousel">
                 <li class="card">
-                  <a href="#name1">
                     <header class="card-image">
                       <img src="images/profile.jpg">
                     </header>
@@ -297,10 +360,15 @@
                       <a class="link-icon" href=""><i class="fa fa-github" aria-hidden="true"></i></a>
                       <a class="link-icon" href=""><i class="fa fa-facebook" aria-hidden="true"></i></a>
                     </div>
-                  </a>
+                    <div class="profile-data">
+                      <img src="images/profile.jpg">
+                      <p>
+                        داستان نگار
+                        به روال برنامه ریزی برای ایجاد یک سایت در فضای مجازی اینترنت که با ساختار کلی و جزئی ارائه می شود طراحی وب سایت گویند. این برنامه ریزی بر روی تمامی تصاویر ،متون ، فایل های صوتی و تصویری و المانهای خاص که برنامه نویسی شده اند اعمال می شود تا در نهایت تمام اینها بر روی صفحه ای که قابل روئیت در مرورگر باشد اعمال می شود و در فرمت بندی خاصی در طراحی وب سایت بر روی آن صفحه قرار می گیرند.
+                      </p>
+                    </div>
                 </li>
                 <li class="card">
-                  <a href="#name1">
                     <header class="card-image">
                       <img src="images/profile.jpg">
                     </header>
@@ -312,10 +380,14 @@
                       <a class="link-icon" href=""><i class="fa fa-github" aria-hidden="true"></i></a>
                       <a class="link-icon" href=""><i class="fa fa-facebook" aria-hidden="true"></i></a>
                     </div>
-                  </a>
+                    <div class="profile-data">
+                      <img src="images/profile.jpg">
+                      <p>
+                        به روال برنامه ریزی برای ایجاد یک سایت در فضای مجازی اینترنت که با ساختار کلی و جزئی ارائه می شود طراحی وب سایت گویند. این برنامه ریزی بر روی تمامی تصاویر ،متون ، فایل های صوتی و تصویری و المانهای خاص که برنامه نویسی شده اند اعمال می شود تا در نهایت تمام اینها بر روی صفحه ای که قابل روئیت در مرورگر باشد اعمال می شود و در فرمت بندی خاصی در طراحی وب سایت بر روی آن صفحه قرار می گیرند.
+                      </p>
+                    </div>
                 </li>
                 <li class="card">
-                  <a href="#name1">
                     <header class="card-image">
                       <img src="images/profile.jpg">
                     </header>
@@ -327,10 +399,14 @@
                       <a class="link-icon" href=""><i class="fa fa-github" aria-hidden="true"></i></a>
                       <a class="link-icon" href=""><i class="fa fa-facebook" aria-hidden="true"></i></a>
                     </div>
-                  </a>
+                    <div class="profile-data">
+                      <img src="images/profile.jpg">
+                      <p>
+                        به روال برنامه ریزی برای ایجاد یک سایت در فضای مجازی اینترنت که با ساختار کلی و جزئی ارائه می شود طراحی وب سایت گویند. این برنامه ریزی بر روی تمامی تصاویر ،متون ، فایل های صوتی و تصویری و المانهای خاص که برنامه نویسی شده اند اعمال می شود تا در نهایت تمام اینها بر روی صفحه ای که قابل روئیت در مرورگر باشد اعمال می شود و در فرمت بندی خاصی در طراحی وب سایت بر روی آن صفحه قرار می گیرند.
+                      </p>
+                    </div>
                 </li>
                 <li class="card">
-                  <a href="#name1">
                     <header class="card-image">
                       <img src="images/profile.jpg">
                     </header>
@@ -342,10 +418,14 @@
                       <a class="link-icon" href=""><i class="fa fa-github" aria-hidden="true"></i></a>
                       <a class="link-icon" href=""><i class="fa fa-facebook" aria-hidden="true"></i></a>
                     </div>
-                  </a>
+                    <div class="profile-data">
+                      <img src="images/profile.jpg">
+                      <p>
+                        به روال برنامه ریزی برای ایجاد یک سایت در فضای مجازی اینترنت که با ساختار کلی و جزئی ارائه می شود طراحی وب سایت گویند. این برنامه ریزی بر روی تمامی تصاویر ،متون ، فایل های صوتی و تصویری و المانهای خاص که برنامه نویسی شده اند اعمال می شود تا در نهایت تمام اینها بر روی صفحه ای که قابل روئیت در مرورگر باشد اعمال می شود و در فرمت بندی خاصی در طراحی وب سایت بر روی آن صفحه قرار می گیرند.
+                      </p>
+                    </div>
                 </li>
                 <li class="card">
-                  <a href="#name1">
                     <header class="card-image">
                       <img src="images/profile.jpg">
                     </header>
@@ -357,7 +437,12 @@
                       <a class="link-icon" href=""><i class="fa fa-github" aria-hidden="true"></i></a>
                       <a class="link-icon" href=""><i class="fa fa-facebook" aria-hidden="true"></i></a>
                     </div>
-                  </a>
+                    <div class="profile-data">
+                      <img src="images/profile.jpg">
+                      <p>
+                        به روال برنامه ریزی برای ایجاد یک سایت در فضای مجازی اینترنت که با ساختار کلی و جزئی ارائه می شود طراحی وب سایت گویند. این برنامه ریزی بر روی تمامی تصاویر ،متون ، فایل های صوتی و تصویری و المانهای خاص که برنامه نویسی شده اند اعمال می شود تا در نهایت تمام اینها بر روی صفحه ای که قابل روئیت در مرورگر باشد اعمال می شود و در فرمت بندی خاصی در طراحی وب سایت بر روی آن صفحه قرار می گیرند.
+                      </p>
+                    </div>
                 </li>
               </ul>
             </div>
