--- a/yasnateam-ui/index.html
+++ b/yasnateam-ui/index.html
@@ -306,7 +306,7 @@
                   <span class="browser-icon"></span>
                 </div>
 
-                <div class="container-fluid">
+                <div class="container-fluid" id="product-view">
                   <div class="row">
                     <div class="col-lg-6 col-lg-push-6">
                       <div class="product-pic">
@@ -351,7 +351,7 @@
                   </div>
                   <div class="col-lg-6">
                     <div class="story-content">
-                      <h4 class="eyebrow"><span class="text-bg">art director</span></h4>
+                      <h4 class="eyebrow"><span class="text-bg job-title">art director</span></h4>
                       <h2 class="about-name-lg name">Yasna Group</h2>
                       <p class="story description">
                         Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
@@ -369,7 +369,6 @@
             <div class="cards-container">
               <ul class="cards owl-carousel">
                 <li class="card">
-                  <a href="#name1">
                     <header class="card-image">
                       <img src="images/profile.jpg">
                     </header>
@@ -381,10 +380,16 @@
                       <a class="link-icon" href=""><i class="fa fa-github" aria-hidden="true"></i></a>
                       <a class="link-icon" href=""><i class="fa fa-facebook" aria-hidden="true"></i></a>
                     </div>
-                  </a>
+                    <div class="profile-data">
+                      <img src="images/profile.jpg">
+                      <p>
+                        This Is Negar's story Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+                        tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+                        quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+                      </p>
+                    </div>
                 </li>
                 <li class="card">
-                  <a href="#name1">
                     <header class="card-image">
                       <img src="images/profile.jpg">
                     </header>
@@ -396,10 +401,16 @@
                       <a class="link-icon" href=""><i class="fa fa-github" aria-hidden="true"></i></a>
                       <a class="link-icon" href=""><i class="fa fa-facebook" aria-hidden="true"></i></a>
                     </div>
-                  </a>
+                    <div class="profile-data">
+                      <img src="images/profile.jpg">
+                      <p>
+                        This Is john's story Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+                        tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+                        quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+                      </p>
+                    </div>
                 </li>
                 <li class="card">
-                  <a href="#name1">
                     <header class="card-image">
                       <img src="images/profile.jpg">
                     </header>
@@ -411,10 +422,16 @@
                       <a class="link-icon" href=""><i class="fa fa-github" aria-hidden="true"></i></a>
                       <a class="link-icon" href=""><i class="fa fa-facebook" aria-hidden="true"></i></a>
                     </div>
-                  </a>
+                    <div class="profile-data">
+                      <img src="images/profile.jpg">
+                      <p>
+                        This Is Negar's story Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+                        tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+                        quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+                      </p>
+                    </div>
                 </li>
                 <li class="card">
-                  <a href="#name1">
                     <header class="card-image">
                       <img src="images/profile.jpg">
                     </header>
@@ -426,10 +443,16 @@
                       <a class="link-icon" href=""><i class="fa fa-github" aria-hidden="true"></i></a>
                       <a class="link-icon" href=""><i class="fa fa-facebook" aria-hidden="true"></i></a>
                     </div>
-                  </a>
+                    <div class="profile-data">
+                      <img src="images/profile.jpg">
+                      <p>
+                        This Is Negar's story Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+                        tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+                        quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+                      </p>
+                    </div>
                 </li>
                 <li class="card">
-                  <a href="#name1">
                     <header class="card-image">
                       <img src="images/profile.jpg">
                     </header>
@@ -441,7 +464,14 @@
                       <a class="link-icon" href=""><i class="fa fa-github" aria-hidden="true"></i></a>
                       <a class="link-icon" href=""><i class="fa fa-facebook" aria-hidden="true"></i></a>
                     </div>
-                  </a>
+                    <div class="profile-data">
+                      <img src="images/profile.jpg">
+                      <p>
+                        This Is Negar's story Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+                        tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+                        quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+                      </p>
+                    </div>
                 </li>
               </ul>
             </div>
