Bootsrap Tooltip Added
demo bootstrao tooltip added.
new html added.

--- a/yasnateam-ui/index.html
+++ b/yasnateam-ui/index.html
@@ -22,6 +22,8 @@
       <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
+
+
   </head>
   <body>
     
@@ -174,7 +176,7 @@
             <div class="col-sm-12">
               <div class="logo-row">
                 <ul class="logo-container owl-carousel">
-                  <li class="logo" data-slide="slide1">
+                  <li class="logo" data-slide="slide1" data-toggle="tooltip" data-placement="left" title="Hooray!">
                     <a href="#">
                       <img src="images/logo/logo1.jpg" width="60" height="60">
                     </a>
@@ -189,7 +191,7 @@
                       <a href="#hi"></a>
                     </div>
                   </li>
-                  <li class="logo" data-slide="slide2">
+                  <li class="logo" data-slide="slide2"  data-toggle="tooltip" data-placement="left" title="Hooray!">
                     <a href="#">
                       <img src="images/logo/logo2.jpg" width="60" height="60">
                     </a>
@@ -204,7 +206,7 @@
                       <a href="#hi"></a>
                     </div>
                   </li>
-                  <li class="logo" data-slide="slide3">
+                  <li class="logo" data-slide="slide3" data-toggle="tooltip" data-placement="left" title="Hooray!">
                     <a href="#">
                       <img src="images/logo/logo3.jpg" width="60" height="60">
                     </a>
@@ -219,7 +221,7 @@
                       <a href="#hi"></a>
                     </div>
                   </li>
-                  <li class="logo" data-slide="slide4">
+                  <li class="logo" data-slide="slide4" data-toggle="tooltip" data-placement="left" title="Hooray!">
                     <a href="#">
                       <img src="images/logo/logo4.jpg" width="60" height="60">
                     </a>
@@ -234,7 +236,7 @@
                       <a href="#hi"></a>
                     </div>
                   </li>
-                  <li class="logo" data-slide="slide5">
+                  <li class="logo" data-slide="slide5" data-toggle="tooltip" data-placement="left" title="Hooray!">
                     <a href="#">
                       <img src="images/logo/logo5.jpg" width="60" height="60">
                     </a>
@@ -249,7 +251,7 @@
                       <a href="#hi"></a>
                     </div>
                   </li>
-                  <li class="logo" data-slide="slide6">
+                  <li class="logo" data-slide="slide6" data-toggle="tooltip" data-placement="left" title="Hooray!">
                     <a href="#">
                       <img src="images/logo/logo6.jpg" width="107" height="60">
                     </a>
@@ -264,7 +266,7 @@
                       <a href="#hi"></a>
                     </div>
                   </li>
-                  <li class="logo" data-slide="slide7">
+                  <li class="logo" data-slide="slide7" data-toggle="tooltip" data-placement="left" title="Hooray!">
                     <a href="#">
                       <img src="images/logo/logo7.jpg" width="60" height="60">
                     </a>
@@ -279,7 +281,7 @@
                       <a href="#hi"></a>
                     </div>
                   </li>
-                  <li class="logo" data-slide="slide8">
+                  <li class="logo" data-slide="slide8" data-toggle="tooltip" data-placement="left" title="Hooray!">
                     <a href="#">
                       <img src="images/logo/logo8.png" width="61" height="60">
                     </a>
@@ -599,6 +601,7 @@
     <script src="js/slider-custom.js"></script>
     <script src="js/btn.js"></script>
     <script src="js/custom.js"></script>
+
     <!-- <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBu-916DdpKAjTmJNIgngS6HL_kDIKU0aU&callback=myMap"></script> -->
 
   </body>
