--- a/yasnateam-ui/blog.html
+++ b/yasnateam-ui/blog.html
@@ -1,10 +1,67 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>Title</title>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
+    <title>Blog</title>
+
+    <!-- Bootstrap -->
+    <link href="css/bootstrap.min.css" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="css/style.css">
+    <link rel="stylesheet" href="css/blog.style.css">
+    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
+    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+    <!--[if lt IE 9]>
+    <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
+    <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+    <![endif]-->
 </head>
 <body>
 
+<div class="wrapper">
+    <header  class="header-style has-dark-bg">
+
+        <div class="container-fluid">
+            <div class="header-content">
+                <a href="#" class="logo">
+              <span class="logo-icon">
+                <img src="images/logo.png" width="371" height="800">
+              </span>
+                    <span class="title">Yasna Group</span>
+                </a>
+
+                <div class="header-btns">
+                    <a href="#" class="btn-login btn-default">Log in</a>
+                    <a href="#contact" class="dark-bg btn-default start-btn">Get started</a>
+                </div>
+            </div>
+        </div>
+
+    </header>
+    <!--   End of Header  -->
+    <section class="has-dark-bg generic-hero">
+        <img class="cover-img">
+        <div class="container">
+            <div class="hero-inner">
+                <h1 class="hero-title">The Main Header</h1>
+            </div>
+        </div>
+    </section>
+
+
+</div>
+
+
+<!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+<script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
+<!-- Include all compiled plugins (below), or include individual files as needed -->
+<script>
+    window.jQuery || document.write('<script src="js/jquery-3.2.1.min.js">\x3C/script>')
+</script>
+<script src="js/bootstrap.min.js"></script>
+<script src="https://use.fontawesome.com/f4fcfb493d.js"></script>
 </body>
 </html>
